--- a/style.css
+++ b/style.css
@@ -1,28 +1,65 @@
 body{
 font-family: 'Poppins', sans-serif;
+margin: 0;
 }
+section{
+    padding-bottom: 50px;
+}
+
 h1{
     font-size: 50px;
     font-weight: 900;
+}
+p{
+    padding-bottom: 5%;
+    text-align: justify;
 }
 .orange{
     color: orange;
 }
 .top-sec{
     display: flex;
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
 }
 .hlf-width{
     width: 40%;
+    padding-left: 5%;
+    padding-top: 9%;
+    margin-left: 6%;
+    justify-content: center;
 }
-.hlf-width img{
-    width: 90%;
+.hlf-width-img{
+    width: 20%;
+    justify-content: center;
 }
 .anchor-tab{
     text-decoration: none;
     background: linear-gradient(60deg, rgb(142, 142, 230), deeppink);
-    padding: 9px 40px;
-    border-radius: 9%;
+    padding: 15px 40px;
+    border-radius: 20px;
     color: azure;
     font-weight: 700;
+    box-shadow: 5px 7px 40px rgb(73, 63, 63);
+}
 
+
+.MIDDLE-SEC{
+    display: flex;
+    background-image: url(images/shapes/Frame\ 57.jpg);
+    background-repeat: no-repeat;
+    
+}
+h2{
+    font-size: 30px;
+    font-weight: 900;
+}
+.hlf-width-2{
+    width: 30%;
+    padding: 5%;
+    margin-right: 5%;
+}
+.hlf-width-img-2{
+    width: 40%;
+    padding-left: 9%;
 }
