--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ h1{
 }
 p{
     padding-bottom: 5%;
-    text-align: justify;
 }
 .orange{
     color: orange;
@@ -47,12 +46,14 @@ p{
 .MIDDLE-SEC{
     display: flex;
     background-image: url(images/shapes/Frame\ 57.jpg);
-    background-repeat: no-repeat;
-    
+    background-repeat: no-repeat; 
 }
 h2{
     font-size: 30px;
-    font-weight: 900;
+    font-weight: bolder;
+}
+#mid-para{
+    margin-bottom: 15%;
 }
 .hlf-width-2{
     width: 30%;
@@ -62,4 +63,34 @@ h2{
 .hlf-width-img-2{
     width: 40%;
     padding-left: 9%;
+}
+
+
+.My-recipies{
+    text-align: center;
+}
+.Recipie-Title{
+    display: flex;
+}
+.Recipie-Title-1{
+    width: 40%;
+    padding: 2%;
+    margin-left: 7%;
+    box-shadow: 5px 7px 50px grey;
+    border-radius: 5%;
+}
+.recipie-img{
+    width: 100%;
+    height: 400px;
+    border-radius: 5%;
+}
+.Recipie-Title-2{
+    width: 40%;
+    padding: 2%;
+    margin-left: 2%;
+    margin-right: 5%;
+    box-shadow: 5px 7px 50px grey;
+    border-radius: 5%;
+}
+
 }
