--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ font-family: 'Poppins', sans-serif;
 margin: 0;
 }
 section{
-    padding-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 h1{
@@ -93,4 +93,34 @@ h2{
     border-radius: 5%;
 }
 
+
+.fourth-sec{
+    display: flex;
+    height: 120px;
+    width: 90%;
+    box-shadow: 9px 4px 40px grey;
+    margin-left: 6%;
+   justify-content: space-around;
+    padding-bottom: 5%;
+    border-radius: 50px;
+}
+.fourth-sec div{
+    margin: 2%;
+    text-align: center;
+   
+}
+
+footer{
+    background-color: black;
+    text-align: center;
+    color: aliceblue;
+    margin-top: 50px;
+    padding-top: 2%;
+    width: 100%;
+}
+h3{
+    font-size: 25px;
+}
+.orange{
+    color: orangered;
 }
